--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,9 @@
+div .avatar.proportioned {
+  width: 300px;
+  height: auto;
+}
 /* Add CSS Styling */
+div .avatar.distorted {
+  width: 200px;
+  height: 400px;
+}
