--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -10,8 +10,31 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  /* margin-bottom: 3rem; */
+  margin-top: 1rem;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 4rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  text-align: center;
+  gap: 1rem;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
