--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -9,6 +9,10 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: minmax(150px, 20%) 1fr;
+  grid-template-rows: 1fr 1fr minmax(150px, min-content) 1fr;
 }
 
 .container div {
@@ -26,7 +30,7 @@ html {
 }
 
 .sidebar {
-  background-color: #005B94;
+  background-color: #005b94;
   grid-row: 2 / 4;
 }
 
@@ -35,7 +39,7 @@ html {
 }
 
 .article {
-  background-color: #7E1DC3;
+  background-color: #7e1dc3;
 }
 
 .article p {
