--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -3,8 +3,19 @@
   padding: 0;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: minmax(15%, 250px) 1fr;
+  grid-template-rows: 10% auto 1fr auto;
+  height: 100%;
+  gap: 0.2rem;
 }
 
 .container div {
@@ -17,15 +28,30 @@
 
 .header {
   background-color: #393f4d;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  grid-column: 1/3;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
+}
+
+.menu ul {
+  display: flex;
+  gap: 2rem;
+  margin-right: 2rem;
 }
 
 .sidebar {
-  background-color: #C50208;
+  background-color: #c50208;
+  display: grid;
+  grid-template: repeat(4, 1fr), 1fr;
+  grid-row: 2 / 4;
+  row-gap: 3rem;
 }
 
 .sidebar .photo {
@@ -36,7 +62,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -45,16 +70,26 @@
 }
 
 .nav {
-  background-color: #C50208;
+  background-color: #c50208;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
+}
+
+.nav ul {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 0.9rem;
 }
 
 .article p {
@@ -65,9 +100,10 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
+  /* height: 205px; */
 }
 
 .card p {
@@ -83,6 +119,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
